--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,13 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/org.json-1.6-20240205.jar"/>
+	<classpathentry kind="lib" path="lib/org.json-1.6-20240205.jar" sourcepath="lib/org.json-1.6-20240205.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="accessible" pattern="Proyecto1"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
