--- a/.classpath
+++ b/.classpath
@@ -8,11 +8,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/org.json-1.6-20240205.jar" sourcepath="lib/org.json-1.6-20240205.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Proyecto1/src/Galeria/CargadorGaleria.java!/"/>
 			<attribute name="module" value="true"/>
 		</attributes>
-		<accessrules>
-			<accessrule kind="accessible" pattern="Proyecto1"/>
-		</accessrules>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
