--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/org.json-1.6-20240205.jar" sourcepath="lib/org.json-1.6-20240205.jar">
+	<classpathentry kind="lib" path="lib/org.json-1.6-20240205.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/Proyecto1/src/Galeria/CargadorGaleria.java!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Proyecto1/lib/org.json-1.6-20240205.jar!/"/>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
